force-app/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <label>Application Log</label>
    <nameField>
        <displayFormat>APPLOG-{0000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Log</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>