force-app/main/default/objects/Application_Log__c/fields/Integration_Response__c.field-meta.xml
<CustomField>
    <fullName>Integration_Response__c</fullName>
    <description>To be populated by callback</description>
    <label>Integration Response</label>
    <type>TextArea</type>
</CustomField>