force-app/main/default/objects/Application_Log__c/fields/Platform_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Name__c</fullName>
    <label>Platform Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>