force-app/main/default/objects/Application_Log__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the user who made the request that made this call back</description>
    <label>RequestedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Log</relationshipName>
    <type>Lookup</type>
</CustomField>