force-app/main/default/objects/Application_Log__c/recordTypes/Integration_Logs.recordType-meta.xml
<RecordType>
    <fullName>Integration_Logs</fullName>
    <active>true</active>
    <label>Integration Logs</label>
</RecordType>