force-app/main/default/objects/Application_Log__c/recordTypes/Salesforce_Log.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Log</fullName>
    <active>true</active>
    <label>Salesforce Log</label>
</RecordType>