force-app/main/default/objects/Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>Platform_Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>