force-app/main/default/objects/Application_Log__c/listViews/Failures.listView-meta.xml
<ListView>
    <fullName>Failures</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Failures</label>
</ListView>