force-app/main/default/objects/Application_Log__c/listViews/Today_s_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Platform_Event_Name__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Logs</label>
</ListView>